--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ addons:
     packages:
     - libcurl4-openssl-dev # https://github.com/typhoeus/typhoeus/issues/568
 before_script:
-  - npm install -g bower
-  - bower install
+  - yarn install
 script:
   - bundle exec jekyll build
   - bundle exec htmlproofer ./www
